--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   </head>
   <body>
     <div class="page-header">
-      <h1><b style="color:purple;">Steven Li's</b> computer science project(s)!</h1>
+      <h1 style="text-align:center;"><b style="color:purple;">Steven Li's</b> computer science project(s)!</h1>
     </div>
     <div class="container">
       <div class="jumbotron">
-        <table border="1px solid black" style="padding:5px">
+        <table border="1px solid black" style="padding:100px">
           <tr>
             <td>
               <a href="pepeprisonbreak.html">El Pepe: Alcatraz Edition</a>
