--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     </div>
     <div class="container">
       <div class="jumbotron">
-        <table border="1px solid black" style="padding:100px">
+        <table>
           <tr>
             <td>
-              <a href="pepeprisonbreak.html">El Pepe: Alcatraz Edition</a>
+              <a href="pepeprisonbreak.html" type="button" class="btn btn-default">El Pepe: Alcatraz Edition</a>
             </td>
           </tr>
         </table>
