--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
             <td>
               <a href="pepeprisonbreak.html" type="button" class="btn btn-default">El Pepe: Alcatraz Edition</a>
             </td>
+            <td>
+              <a href=# type="button" class="btn btn-default">RAREST PEPE</a>
+            </td>
+            <td>
+              <a href=# type="button" class="btn btn-default">Yolo gurl</a>
+            </td>
           </tr>
         </table>
       </div>
