--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="page-header">
-      <h1 style="text-align:center;"><b style="color:purple;">Steven Li's</b> computer science project(s)</h1>
+      <h1 style="text-align:center;"><b style="color:blue;">Steven Li's</b> computer science project(s)</h1>
     </div>
     <div class="container">
       <div class="jumbotron">
