--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="page-header">
-      <h1 style="text-align:center;"><b style="color:blue;">Steven Li's</b> computer science project(s)</h1>
+      <h1 style="text-align:center;"><b style="color:blue;">Steven Li's</b> Computer Science Project(s)</h1>
         <h2 style="text-align:center;"><b style="color:blue;">Business Inquiries:</b> StevenLi930@gmail.com</h2>
           <h3 style="text-align:center;"><b style="color:red;">TJHSST </b> Class of 2017</h3>
     </div>
