--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <table>
           <tr style="padding:50px">
             <td>
-              <a href="pepeprisonbreak.html" type="button" class="btn btn-default">El Pepe: Alcatraz Edition</a>
+              <a href="pepeprisonbreak.html" type="button" class="btn btn-default">El Pepe Prison Break: Alcatraz Edition</a>
             </td>
           </tr>
         </table>
