--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <h1 style="text-align:center;"><b style="color:blue;">Steven Li's</b> Computer Science Project(s)</h1>
         <h2 style="text-align:center;"><b style="color:blue;">Business Inquiries:</b> StevenLi930@gmail.com</h2>
           <h3 style="text-align:center;"><b style="color:red;">TJHSST </b> Class of 2017</h3>
+            <h4 style="text-align:center;"><b style="color:red;">Catagory </b> Games</h3>
     </div>
     <div class="container">
       <div class="jumbotron">
