--- a/pepeprisonbreak.html
+++ b/pepeprisonbreak.html
@@ -14,24 +14,24 @@
 			<h1>El Pepe<br>Alcatraz Edition</h1>
 			<button type='button' class='btn btn-link' style='color:white;text-decoration:none;'>START</button>
 		</div>
-		
+
 		<div id='letter'>
 			<h4>If you can get out of your cell I can take you off the island<br> - The Illuminati.</h4>
 			<h5>NEXT</h5>
 		</div>
-		
+
 		<div id='prison'>
 			<h1>You are in prison. Which item will you choose?</h1>
 			<img name='spoon' src='images/spoon.png'>
 			<img name='tray' src='images/test.png'>
 		</div>
-		
+
 		<div id='spoon-choice'>
 			<img src='images/spoon.png'>
 			<h1><a name='use'>Use</a> or <a name='ignore'>Ignore</a></h1>
 			<!-- jet fuel cant melt steel beams  -->
 		</div>
-		
+
 		<div id='tray-choice'>
 			<h1>You find items in your tray.</h1>
 			<span name='tray-choice_photos'>
@@ -45,9 +45,9 @@
 				<a name='paperclip' style='position:relative;left:35px;'>Paper Clip</a>
 			</h1>
 		</div>
-		
+
 		<div id='diamond'>
-			<h1>You want to choose who to bribe with the diamond.</h1>
+			<h1>Who will you bribe with the diamond?</h1>
 			<span name='diamond_photos'>
 				<img src="images/police.png" style="position:absolute;top:170px">
 				<img src="images/prisoner.png" style="position:absolute;top:182px;left:500px">
@@ -57,36 +57,36 @@
 				<a name="prisoner" style="position:absolute;top:100px;left:550px;color:black;text-decoration:none;">Prisoner</a>
 			</h1>
 		</div>
-		
+
 		<div id='police'>
 			<h1>You agree with the police for escape in exchange for the diamond.</h1>
 			<img src='images/handshake.jpg'>
 			<h1 name='jailfree'>Next</h1>
 		</div>
-		
+
 		<div id='paperclip'>
 			<h1>You can unlock the cell with the paperclip.</h1>
-			
+
 			<img src='images/lock.png' style="position:absolute;left:700px;margin-top:150px;">
 		</div>
-		
+
 		<div id='unlocked'>
 			<h1>You unlocked the cell.</h1>
 			<img src='images/Unlocked.png'>
 		</div>
-		
+
 		<div id='jailfree'>
 			<h1>You've escaped the cell!</h1>
 			<img src='images/Escaped.png' style='width:100%'>
 			<h1 name='win'>Next</h1>
 		</div>
-		
+
 		<div id='win'>
 			<img src='images/freed1.png' style='width:100%;'>
 		</div>
-		
+
 		<div id='gameover'>
 		</div>
-		
+
 	</body>
 </html>
